# hypothesisapi

./: .gitignore  AUTHORS.rst  CLAUDE.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
docs/: API_GUIDE.md  API_V2_RESEARCH.md  Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: 01_read_annotation.py  02_collection_stats.py  03_search_by_uri.py  04_search_by_tag.py  05_create_annotation.py  06_update_annotation.py  07_temporary_annotation.py  08_export_annotations.py  09_batch_tag_update.py  10_list_groups.py  11_create_group.py  12_search_group_annotations.py  13_user_profile.py  14_recent_annotations.py  FIXTURES.md  README.md  _common.py  create_simple.py  setup_fixtures.py
hypothesisapi/: __init__.py
notebooks/: Using_hypothesisapi.ipynb  hypothesis_stats.ipynb
tests/: test_hypothesisapi.py
