[build-system]
requires = ["setuptools>=61.0", "wheel>=0.46.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hypothesisapi"
version = "0.4.0"
description = "Python wrapper for the Hypothesis web annotation API"
readme = "README.rst"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Raymond Yee", email = "raymond.yee@gmail.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
keywords = ["hypothesis", "annotations", "web-annotations", "api"]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "types-requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/rdhyee/hypothesisapi"
Documentation = "https://hypothesisapi.readthedocs.org"
Repository = "https://github.com/rdhyee/hypothesisapi"
Issues = "https://github.com/rdhyee/hypothesisapi/issues"

[tool.setuptools.packages.find]
include = ["hypothesisapi*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=hypothesisapi"

[tool.ruff]
target-version = "py38"
line-length = 100
